--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  cclogin: MyString
+# one:
+#   name: MyString
+#   cclogin: MyString
 
-two:
-  name: MyString
-  cclogin: MyString
+# two:
+#   name: MyString
+#   cclogin: MyString
